8329757: Crash with fatal error: DEBUG MESSAGE: Fast Unlock lock on stack